pkl-core/src/test/files/LanguageSnippetTests/input/errors/reference19.pkl
import "pkl:ref"

class A {
  foo: String | Int | Boolean
}

class D extends ref.Domain {
  function renderReference(reference: ref.Reference<D, Any>): String = throw("not supported")
}
local d: D = new {}

test = ref.Reference(d, A, "").foo as ref.Reference<D, Int | Boolean>
